adiciona uma navegação basica

--- a/tabelas.html
+++ b/tabelas.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Elementos estruturais</h1>
     <p>
-    Tabelas são elementos estruturais que organizam 
+    Tabelas são <a href="index.html">elementos estruturais</a> que organizam 
     dados multivariados relacioandos dentro de um conteudo. Não use 
     tabelas para fazer listas!
 </p>
