--- a/listas.html
+++ b/listas.html
@@ -8,9 +8,12 @@
 <body>
     <h1>Elementos de listas</h1>
     <p>
-    listas são elementos estruturais que organizam 
+    listas são <a href="index.html">elementos estruturais</a> que organizam 
     items relacionados dentro de um conteudo. Não use 
     listas para dados multivariados, use tabelas.
 </p>
+<h2></h2>
+<h2></h2>
+<h2></h2>
 </body>
 </html>
