liga listas e tabelas

--- a/listas.html
+++ b/listas.html
@@ -10,7 +10,7 @@
     <p>
     listas são <a href="index.html">elementos estruturais</a> que organizam 
     items relacionados dentro de um conteudo. Não use 
-    listas para dados multivariados, use tabelas.
+    listas para dados multivariados, use <a href="tabelas.html">tabelas</a>.
 </p>
 <h2></h2>
 <h2></h2>
