--- a/tabelas.html
+++ b/tabelas.html
@@ -10,7 +10,7 @@
     <p>
     Tabelas são <a href="index.html">elementos estruturais</a> que organizam 
     dados multivariados relacioandos dentro de um conteudo. Não use 
-    tabelas para fazer listas!
+    tabelas para fazer <a href="listas.html">listas</a>!
 </p>
 </body>
 </html>
