adiciona navegação auxiliar

--- a/tabelas.html
+++ b/tabelas.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DCC202 Aula 05:tabellas </title>
-</head>
-<body>
-    <h1>Elementos estruturais</h1>
-    <p>
-    Tabelas são <a href="index.html">elementos estruturais</a> que organizam 
-    dados multivariados relacioandos dentro de um conteudo. Não use 
-    tabelas para fazer <a href="listas.html">listas</a>!
-</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DCC202 Aula 05:tabellas</title>
+  </head>
+  <body>
+    <main>
+      <h1>Elementos estruturais</h1>
+      <p>
+        Tabelas são <a href="index.html">elementos estruturais</a> que organizam
+        dados multivariados relacioandos dentro de um conteudo. Não use tabelas
+        para fazer <a href="listas.html">listas</a>!
+      </p>
+    </main>
+    <aside>
+      <nav>
+        <li><a href="index.html">Elementos Estruturais</a></li>
+        <li><a href="listas.html">Listas</a></li>
+        <li><a href="tabelas.html">Tabelas</a></li>
+      </nav>
+    </aside>
+  </body>
 </html>
