--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DCC202 Aula 05:Elementos Estruturais</title>
-</head>
-<body>
-    <h1>Elementos estruturais</h1>
-    <p>
-    Com elementos estruturais podemos exibir <a href="listas.html">listas</a>
-    e dados multivariados via 
-    <a href="http://127.0.0.1:5500/tabelas.html">tabelas</a>.
-</p>
-<p>
-    As <a href="ligacoes.html">ligações</a> entre documentos são 
-    considerados a nossa implementação de 
-    hipertexto
-</p>
-</body>
+  </head>
+  <body>
+    <main>
+      <h1>Elementos estruturais</h1>
+      <p>
+        Com elementos estruturais podemos exibir
+        <a href="listas.html">listas</a>
+        e dados multivariados via
+        <a href="tabelas.html">tabelas</a>.
+      </p>
+      <p>
+        As <a href="ligacoes.html">ligações</a> entre documentos são
+        considerados a nossa implementação de hipertexto
+      </p>
+    </main>
+    <aside>
+      <nav>
+        <li><a href="index.html">Elementos Estruturais</a></li>
+        <li><a href="listas.html">Listas</a></li>
+        <li><a href="tabelas.html">Tabelas</a></li>
+      </nav>
+    </aside>
+  </body>
 </html>
