--- a/listas.html
+++ b/listas.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DCC202 Aula 05: Listas</title>
-</head>
-<body>
-    <h1>Elementos de listas</h1>
-    <p>
-    listas são <a href="index.html">elementos estruturais</a> que organizam 
-    items relacionados dentro de um conteudo. Não use 
-    listas para dados multivariados, use <a href="tabelas.html">tabelas</a>.
-</p>
-<h2></h2>
-<h2></h2>
-<h2></h2>
-</body>
+  </head>
+  <body>
+    <main>
+      <h1>Elementos de listas</h1>
+      <p>
+        listas são <a href="index.html">elementos estruturais</a> que organizam
+        items relacionados dentro de um conteudo. Não use listas para dados
+        multivariados, use <a href="tabelas.html">tabelas</a>.
+      </p>
+      <h2>Listas Ordenada</h2>
+      <h2>Listas não Ordenadas</h2>
+      <h2>Listas de Definição</h2>
+    </main>
+    <aside>
+      <nav>
+        <li><a href="index.html">Elementos Estruturais</a></li>
+        <li><a href="listas.html">Listas</a></li>
+        <li><a href="tabelas.html">Tabelas</a></li>
+      </nav>
+    </aside>
+  </body>
 </html>
